<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tick Tock Tap</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add Alarm</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_alarms">AlarmsActivity</string>
    <string name="title_activity_alarm_detail">AlarmDetailActivity</string>
    <string name="details_alarm_name">Alarm Name</string>
    <string name="details_repeat_weekly">Repeat Weekly</string>
    <string name="details_sunday">Sunday</string>
    <string name="details_monday">Monday</string>
    <string name="details_tuesday">Tuesday</string>
    <string name="details_wednesday">Wednesday</string>
    <string name="details_thursday">Thursday</string>
    <string name="details_friday">Friday</string>
    <string name="details_saturday">Saturday</string>
    <string name="details_alarm_tone">Alarm Tone</string>
    <string name="details_alarm_tone_default">Select an alarm tone</string>
    <string name="details_missing_ringtone">Please select an alarm tone</string>
    <string name="title_activity_alarm_dismiss">Dismiss Alarm</string>
    <string name="title_activity_settings">Settings</string>
    

    <!-- ######### PREFERENCE STRINGS ########### -->

    <string name="pref_key_colorScheme">pref_key_colorScheme</string>
    <string name="pref_colorScheme">Color Scheme</string>
    <string name="pref_colorScheme_default">Light with Dark Action Bar</string>
    <string name="pref_colorScheme_defaultSummary">Light with Dark Action Bar</string>

    <string name="pref_key_silenceAfter">pref_key_silenceAfter</string>
    <string name="pref_silenceAfter">Silence After</string>
    <string name="pref_silenceAfter_default">600000</string>
    <string name="pref_silenceAfter_defaultSummary">10 minutes</string>

    <string name="pref_key_fadeIn">pref_key_fadeIn</string>
    <string name="pref_fadeIn">Fade-in Duration</string>
    <string name="pref_fadeIn_default">0</string>
    <string name="pref_fadeIn_defaultSummary">None</string>
    
    <string name="pref_title_snooze">Snooze</string>

    <string name="pref_key_numSnoozes">pref_key_numSnoozes</string>
    <string name="pref_numSnoozes">Snooze Limit</string>
    <string name="pref_numSnoozes_default">0</string>
    <string name="pref_numSnoozes_defaultSummary">0 snoozes</string>

    <string name="pref_key_snoozeLength">pref_key_snoozeLength</string>
    <string name="pref_snoozeLength">Snooze Length</string>
    <string name="pref_snoozeLength_default">300000</string>
    <string name="pref_snoozeLength_defaultSummary">5 minutes</string>
    
    <string name="pref_title_volume">Volume</string>

    <string name="pref_key_useDefaultVolume">pref_key_useDefaultVolume</string>
    <string name="pref_useDefaultVolume">Use Default Volume</string>
    <string name="pref_useDefaultVolume_defaultSummary">Use the system setting for alarm volume</string>

    <string name="pref_key_alarmVolume">pref_key_alarmVolume</string>
    <string name="pref_alarmVolume">Alarm Volume</string>
    <string name="pref_alarmVolume_default">9</string>
    <string name="pref_alarmVolume_defaultSummary">9 / 9</string>

    <string name="pref_key_showAlarmIcon">pref_key_showAlarmIcon</string>
    <string name="pref_showAlarmIcon">Show Alarm Icon</string>
    <string name="pref_showAlarmIcon_defaultSummary">Show icon when alarm is set</string>

    <string name="pref_dummyPref">Dummy Preference</string>
    <string name="pref_dummyPref_summary">A dummy placeholder preference</string>

</resources>
