<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:isScrollContainer="true" >

    <RelativeLayout
        android:id="@+id/alarm_detail_root_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        tools:context=".AlarmDetailsActivity" >

        <TimePicker
            android:id="@+id/alarm_details_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/alarm_details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/alarm_details_time_picker"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:ems="10"
            android:hint="@string/details_alarm_name" />

        <View
            android:id="@+id/divider2"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_details_name" />
        
        <LinearLayout
            android:id="@+id/alarm_details_repeat_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/divider2" >
        
	        <com.ryanchipman.ticktocktap.ui.CustomToggleButton
	            android:id="@+id/alarm_details_repeat_weekly"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:checked="true"
	            android:text="@string/details_repeat_weekly" />
	        
	        <RelativeLayout
	            android:id="@+id/alarm_details_repeat_day_container"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:paddingBottom="16dp"
		        android:paddingLeft="16dp"
		        android:paddingRight="16dp"
		        android:layout_below="@id/alarm_details_repeat_weekly"
		        android:layout_alignParentLeft="true"
		        android:animateLayoutChanges="true" >
	        
		        <com.ryanchipman.ticktocktap.ui.CustomToggleButton
		            android:id="@+id/alarm_details_repeat_sunday"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:layout_alignParentTop="true"
		            android:checked="true"
		            android:text="@string/details_sunday" />
		        
		        <com.ryanchipman.ticktocktap.ui.CustomToggleButton
		            android:id="@+id/alarm_details_repeat_monday"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:layout_alignRight="@+id/alarm_details_repeat_sunday"
		            android:layout_below="@+id/alarm_details_repeat_sunday"
		            android:checked="true"
		            android:text="@string/details_monday" />
		        
		        <com.ryanchipman.ticktocktap.ui.CustomToggleButton
		            android:id="@+id/alarm_details_repeat_tuesday"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:layout_alignRight="@+id/alarm_details_repeat_monday"
		            android:layout_below="@+id/alarm_details_repeat_monday"
		            android:checked="true"
		            android:text="@string/details_tuesday" />
		        
		        <com.ryanchipman.ticktocktap.ui.CustomToggleButton
		            android:id="@+id/alarm_details_repeat_wednesday"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:layout_alignRight="@+id/alarm_details_repeat_tuesday"
		            android:layout_below="@+id/alarm_details_repeat_tuesday"
		            android:checked="true"
		            android:text="@string/details_wednesday" />
		        
		        <com.ryanchipman.ticktocktap.ui.CustomToggleButton
		            android:id="@+id/alarm_details_repeat_thursday"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:layout_alignRight="@+id/alarm_details_repeat_wednesday"
		            android:layout_below="@+id/alarm_details_repeat_wednesday"
		            android:checked="true"
		            android:text="@string/details_thursday" />
		        
		        <com.ryanchipman.ticktocktap.ui.CustomToggleButton
		            android:id="@+id/alarm_details_repeat_friday"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:layout_alignRight="@+id/alarm_details_repeat_thursday"
		            android:layout_below="@+id/alarm_details_repeat_thursday"
		            android:checked="true"
		            android:text="@string/details_friday" />
		
		        <com.ryanchipman.ticktocktap.ui.CustomToggleButton
			        android:id="@+id/alarm_details_repeat_saturday"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignParentLeft="true"
			        android:layout_alignRight="@+id/alarm_details_repeat_friday"
			        android:layout_below="@+id/alarm_details_repeat_friday"
			        android:checked="true"
			        android:text="@string/details_saturday" />
		    
		    </RelativeLayout>
		    
	    </LinearLayout>
        
        <View
            android:id="@+id/divider4"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_details_repeat_container" />

        <LinearLayout
            android:id="@+id/alarm_ringtone_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/divider4"
            android:background="@drawable/view_touch_selector"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/alarm_label_tone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/details_alarm_tone"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/alarm_label_tone_selection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/details_alarm_tone_default"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:id="@+id/divider3"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_ringtone_container" />
    </RelativeLayout>

</ScrollView>